--- a/css/style.css
+++ b/css/style.css
@@ -157,16 +157,24 @@ a.flyo-works {
 .last-section {
 	background-color: #0b1523;
 }
+.lorem {
+	display: inline-flex;
+}
+.lorm {
+	width: 20px;
+	height: 20px;
+	margin-right: 15px;
+	margin-top: 15px;
+}
 .img-logo {
 	margin-top: 150px;
 	margin-bottom: 30px;
-	margin-left: 40px;
+	margin-left: 30px;
 }
 .last-flex {
 	display: flex;
 	height: 200px;
 	justify-content: space-around;
-	margin-left: 40px;
 }
 .last-flex > div {
 	width: 170px;
